--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,31 +1,118 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
-        android:width="108dp"
-        android:height="108dp"
-        android:viewportWidth="108"
-        android:viewportHeight="108">
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="2134"
+    android:viewportHeight="2134">
+  <group android:scaleX="0.51"
+      android:scaleY="0.51"
+      android:translateX="522.83"
+      android:translateY="522.83">
     <path
-            android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                    android:startY="49.59793"
-                    android:startX="42.9492"
-                    android:endY="92.4963"
-                    android:endX="85.84757"
-                    android:type="linear">
-                <item
-                        android:color="#44000000"
-                        android:offset="0.0"/>
-                <item
-                        android:color="#00000000"
-                        android:offset="1.0"/>
-            </gradient>
-        </aapt:attr>
-    </path>
+        android:pathData="M1930.5,516.3l-0,1106.3c-0,240.9 -195.5,436.4 -436.4,436.4l-872.8,0c-240.9,0 -436.4,-195.5 -436.4,-436.4l0,-1106.3c0,-240.9 195.5,-436.4 436.4,-436.4l872.8,0c240.9,0 436.4,195.5 436.4,436.4Z"
+        android:fillColor="#ff9b00"/>
     <path
-            android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-            android:fillColor="#FFFFFF"
-            android:fillType="nonZero"
-            android:strokeWidth="1"
-            android:strokeColor="#00000000"/>
+        android:pathData="M1890.8,532.7l-0,1062.2c-0,231.3 -187.8,419 -419,419l-838.1,0c-231.3,0 -419,-187.8 -419,-419l0,-1062.2c0,-231.3 187.8,-419 419,-419l838.1,-0c231.3,-0 419,187.8 419,419Z"
+        android:fillColor="#8a7171"/>
+    <path
+        android:pathData="M1775.2,344.3l-0,128.5c-0,35.4 -28.8,64.2 -64.2,64.2l-1315.5,-0c-35.4,-0 -64.2,-28.8 -64.2,-64.2l0,-128.5c0,-35.5 28.8,-64.2 64.2,-64.2l1315.5,-0c35.4,-0 64.2,28.8 64.2,64.2Z"
+        android:fillColor="#c2fcbd"/>
+    <path
+        android:pathData="M649.2,988.4l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l-0,-137.4c-0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M500.9,1114.2l-0,-28.7l-52,-0l0,-13.5l54.7,-77.7l12,0l0,77.7l16.2,-0l-0,13.5l-16.2,-0l0,28.7l-14.7,-0ZM500.9,1072l-0,-54l-37.5,54l37.5,-0Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M649.2,1320.1l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l-0,-137.4c-0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M509.2,1445.9l-14.7,-0l0,-93.8c-3.5,3.4 -8.2,6.8 -13.9,10.1c-5.7,3.4 -10.9,5.9 -15.5,7.6l0,-14.2c8.2,-3.9 15.4,-8.6 21.6,-14.1c6.2,-5.5 10.5,-10.8 13.1,-16l9.5,-0l-0,120.3Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1028.8,1660.5l0,137.4c0,37.9 -30.8,68.7 -68.7,68.7l-557.7,0c-37.9,0 -68.7,-30.8 -68.7,-68.7l-0,-137.4c-0,-37.9 30.8,-68.7 68.7,-68.7l557.7,0c37.9,0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M638.7,1728.3c-0,-14.2 1.5,-25.6 4.4,-34.2c2.9,-8.6 7.2,-15.3 13,-20c5.7,-4.7 13,-7 21.7,-7c6.4,-0 12.1,1.3 16.9,3.9c4.8,2.6 8.9,6.3 12,11.2c3.2,4.9 5.6,10.8 7.4,17.8c1.8,7 2.7,16.4 2.7,28.3c0,14.1 -1.4,25.4 -4.3,34c-2.9,8.6 -7.2,15.3 -13,20c-5.7,4.7 -13,7.1 -21.8,7.1c-11.6,0 -20.6,-4.1 -27.2,-12.4c-7.9,-10 -11.9,-26.2 -11.9,-48.7ZM653.8,1728.3c-0,19.7 2.3,32.8 6.9,39.3c4.6,6.5 10.3,9.8 17,9.8c6.8,-0 12.4,-3.3 17,-9.8c4.6,-6.5 6.9,-19.6 6.9,-39.2c0,-19.7 -2.3,-32.8 -6.9,-39.3c-4.6,-6.5 -10.3,-9.7 -17.2,-9.7c-6.8,0 -12.2,2.9 -16.2,8.6c-5.1,7.3 -7.6,20.8 -7.6,40.5Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M649.2,664.7l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l-0,-137.4c-0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M454.7,686.4l-0,-14.1l77.6,0l-0,11.4c-7.6,8.1 -15.2,18.9 -22.7,32.4c-7.5,13.5 -13.3,27.3 -17.4,41.5c-2.9,10 -4.8,21 -5.6,32.9l-15.1,-0c0.2,-9.4 2,-20.8 5.6,-34.2c3.5,-13.4 8.6,-26.2 15.2,-38.6c6.6,-12.4 13.7,-22.8 21.1,-31.3l-58.7,0Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1031.8,989.3l0,137.4c0,37.9 -30.8,68.7 -68.7,68.7l-180.9,0c-37.9,0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,0c37.9,0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M836.2,1083.8l15.4,-1.3c1.1,7.5 3.8,13.2 8,17c4.2,3.8 9.2,5.7 15.1,5.7c7.1,0 13.1,-2.7 18,-8c4.9,-5.3 7.4,-12.4 7.4,-21.3c0,-8.4 -2.4,-15 -7.1,-19.9c-4.7,-4.8 -10.9,-7.3 -18.5,-7.3c-4.7,-0 -9,1.1 -12.8,3.2c-3.8,2.2 -6.8,4.9 -9,8.4l-13.8,-1.8l11.6,-61.5l59.6,0l-0,14.1l-47.8,-0l-6.5,32.2c7.2,-5 14.7,-7.5 22.6,-7.5c10.5,0 19.3,3.6 26.5,10.9c7.2,7.2 10.8,16.6 10.8,28c-0,10.8 -3.2,20.2 -9.5,28.1c-7.7,9.7 -18.2,14.6 -31.5,14.6c-10.9,-0 -19.8,-3.1 -26.7,-9.2c-6.9,-6.1 -10.8,-14.2 -11.8,-24.3Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1031.8,1321.1l0,137.4c0,37.9 -30.8,68.7 -68.7,68.7l-180.9,0c-37.9,0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,0c37.9,0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M913.6,1432.8l0,14.1l-79.2,0c-0.1,-3.5 0.5,-6.9 1.7,-10.2c2,-5.4 5.2,-10.7 9.7,-15.9c4.4,-5.2 10.9,-11.3 19.3,-18.1c13,-10.7 21.8,-19.1 26.4,-25.4c4.6,-6.2 6.9,-12.1 6.9,-17.7c0,-5.8 -2.1,-10.7 -6.3,-14.8c-4.2,-4 -9.6,-6 -16.3,-6c-7.1,-0 -12.8,2.1 -17,6.4c-4.3,4.3 -6.4,10.1 -6.5,17.7l-15.1,-1.6c1,-11.3 4.9,-19.9 11.7,-25.8c6.8,-5.9 15.8,-8.9 27.2,-8.9c11.5,0 20.6,3.2 27.3,9.6c6.7,6.4 10.1,14.3 10.1,23.7c-0,4.8 -1,9.5 -2.9,14.1c-2,4.6 -5.2,9.5 -9.8,14.6c-4.6,5.1 -12.1,12.2 -22.7,21.1c-8.8,7.4 -14.5,12.4 -17,15.1c-2.5,2.6 -4.6,5.3 -6.2,8l58.8,0Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1031.8,665.7l0,137.4c0,37.9 -30.8,68.7 -68.7,68.7l-180.9,0c-37.9,0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,0c37.9,0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M858.9,726.6c-6.1,-2.2 -10.6,-5.4 -13.6,-9.6c-2.9,-4.1 -4.4,-9.1 -4.4,-14.9c-0,-8.7 3.1,-16 9.4,-22c6.3,-5.9 14.6,-8.9 25,-8.9c10.5,0 18.9,3 25.3,9.1c6.4,6.1 9.6,13.5 9.6,22.2c0,5.6 -1.5,10.4 -4.4,14.5c-2.9,4.1 -7.3,7.3 -13.3,9.5c7.4,2.4 13,6.3 16.8,11.6c3.8,5.3 5.8,11.7 5.8,19.1c-0,10.2 -3.6,18.9 -10.9,25.8c-7.2,7 -16.8,10.5 -28.6,10.5c-11.8,-0 -21.4,-3.5 -28.6,-10.5c-7.2,-7 -10.9,-15.7 -10.9,-26.2c0,-7.8 2,-14.3 5.9,-19.6c4,-5.3 9.6,-8.8 16.9,-10.7ZM855.9,701.6c-0,5.7 1.8,10.3 5.5,13.9c3.7,3.6 8.4,5.4 14.2,5.4c5.7,-0 10.3,-1.8 13.9,-5.4c3.6,-3.6 5.4,-7.9 5.4,-13.1c0,-5.4 -1.9,-9.9 -5.6,-13.6c-3.7,-3.7 -8.4,-5.5 -13.9,-5.5c-5.6,-0 -10.3,1.8 -14,5.4c-3.7,3.6 -5.6,7.9 -5.6,12.9ZM851.2,757c0,4.2 1,8.3 3,12.2c2,3.9 4.9,7 8.9,9.1c3.9,2.2 8.1,3.2 12.7,3.2c7,0 12.8,-2.3 17.4,-6.8c4.6,-4.5 6.9,-10.3 6.9,-17.2c-0,-7.1 -2.4,-12.9 -7.1,-17.6c-4.7,-4.6 -10.6,-6.9 -17.7,-6.9c-6.9,-0 -12.7,2.3 -17.2,6.9c-4.6,4.6 -6.8,10.3 -6.8,17.2Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1407.5,995.7l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1288.3,1031.1l-14.6,1.1c-1.3,-5.8 -3.2,-10 -5.6,-12.6c-4,-4.2 -8.9,-6.3 -14.7,-6.3c-4.7,0 -8.8,1.3 -12.3,3.9c-4.6,3.4 -8.3,8.3 -11,14.8c-2.7,6.5 -4.1,15.7 -4.2,27.7c3.5,-5.4 7.9,-9.4 13,-12c5.1,-2.6 10.5,-3.9 16.1,-3.9c9.8,0 18.2,3.6 25.1,10.8c6.9,7.2 10.3,16.6 10.3,28c-0,7.5 -1.6,14.5 -4.9,21c-3.2,6.5 -7.7,11.4 -13.4,14.8c-5.7,3.4 -12.1,5.1 -19.3,5.1c-12.3,0 -22.3,-4.5 -30,-13.5c-7.7,-9 -11.6,-23.9 -11.6,-44.6c-0,-23.2 4.3,-40 12.8,-50.5c7.5,-9.2 17.5,-13.7 30.2,-13.7c9.4,-0 17.2,2.6 23.2,7.9c6,5.3 9.6,12.6 10.8,21.9ZM1228.2,1082.7c-0,5.1 1.1,9.9 3.2,14.6c2.2,4.6 5.2,8.2 9,10.6c3.9,2.4 7.9,3.6 12.2,3.6c6.2,-0 11.6,-2.5 16,-7.5c4.5,-5 6.7,-11.8 6.7,-20.4c-0,-8.3 -2.2,-14.8 -6.6,-19.6c-4.4,-4.8 -10,-7.2 -16.7,-7.2c-6.6,-0 -12.3,2.4 -16.9,7.2c-4.6,4.8 -6.9,11 -6.9,18.8Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1774.8,995.7l0,137.4c0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1614.3,1102.2l0,-32.9l-32.6,-0l0,-13.7l32.6,-0l0,-32.6l13.9,-0l0,32.6l32.6,-0l0,13.7l-32.6,-0l0,32.9l-13.9,0Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1407.5,1327.4l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1212,1421.7l14.7,-2c1.7,8.3 4.6,14.3 8.6,18c4.1,3.7 9,5.5 14.8,5.5c6.9,-0 12.8,-2.4 17.5,-7.2c4.8,-4.8 7.2,-10.7 7.2,-17.8c0,-6.8 -2.2,-12.3 -6.6,-16.7c-4.4,-4.4 -10,-6.6 -16.8,-6.6c-2.8,-0 -6.2,0.5 -10.4,1.6l1.6,-12.9c1,0.1 1.8,0.2 2.4,0.2c6.3,0 11.9,-1.6 16.9,-4.9c5,-3.3 7.5,-8.3 7.5,-15.1c-0,-5.4 -1.8,-9.9 -5.5,-13.4c-3.7,-3.5 -8.4,-5.3 -14.1,-5.3c-5.7,0 -10.5,1.8 -14.3,5.4c-3.8,3.6 -6.3,9 -7.4,16.2l-14.7,-2.6c1.8,-9.9 5.9,-17.5 12.3,-22.9c6.4,-5.4 14.3,-8.1 23.8,-8.1c6.5,-0 12.6,1.4 18.1,4.2c5.5,2.8 9.7,6.6 12.6,11.5c2.9,4.8 4.4,10 4.4,15.4c0,5.2 -1.4,9.9 -4.2,14.1c-2.8,4.3 -6.9,7.6 -12.3,10.1c7.1,1.6 12.6,5 16.5,10.2c3.9,5.2 5.9,11.6 5.9,19.3c-0,10.5 -3.8,19.3 -11.4,26.6c-7.6,7.3 -17.3,10.9 -28.9,10.9c-10.5,0 -19.2,-3.1 -26.2,-9.4c-6.9,-6.3 -10.9,-14.4 -11.9,-24.4Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1407.5,1659.7l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1241.1,1768.8h16.8v16.8h-16.8z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1774.8,1338.3l0,449.5c0,43.9 -35.7,79.6 -79.6,79.6l-159.2,0c-43.9,0 -79.6,-35.7 -79.6,-79.6l0,-449.5c0,-43.9 35.7,-79.6 79.6,-79.6l159.2,-0c43.9,-0 79.6,35.7 79.6,79.6Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1660.8,1543.4l-79.1,-0l0,-13.7l79.1,-0l0,13.7ZM1660.8,1579.8l-79.1,0l0,-13.7l79.1,-0l0,13.7Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1407.5,672.1l-0,137.4c-0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1214.2,770.2l14.1,-1.3c1.2,6.6 3.5,11.5 6.9,14.5c3.4,3 7.7,4.5 13,4.5c4.5,-0 8.5,-1 11.9,-3.1c3.4,-2.1 6.2,-4.8 8.4,-8.3c2.2,-3.5 4,-8.1 5.5,-14c1.5,-5.9 2.2,-11.9 2.2,-18c0,-0.7 -0,-1.6 -0.1,-2.9c-2.9,4.7 -7,8.5 -12.1,11.4c-5.1,2.9 -10.6,4.4 -16.6,4.4c-9.9,0 -18.3,-3.6 -25.2,-10.8c-6.9,-7.2 -10.3,-16.7 -10.3,-28.4c-0,-12.2 3.6,-21.9 10.7,-29.3c7.2,-7.4 16.1,-11.1 26.9,-11.1c7.8,-0 14.9,2.1 21.4,6.3c6.5,4.2 11.4,10.2 14.7,17.9c3.4,7.8 5,19 5,33.7c-0,15.3 -1.7,27.5 -5,36.6c-3.3,9.1 -8.3,16 -14.8,20.7c-6.6,4.7 -14.3,7.1 -23.1,7.1c-9.4,0 -17,-2.6 -23,-7.8c-5.9,-5.2 -9.5,-12.5 -10.7,-21.9ZM1274.4,717.3c-0,-8.4 -2.2,-15.1 -6.7,-20.1c-4.5,-5 -9.9,-7.4 -16.2,-7.4c-6.5,0 -12.2,2.7 -17.1,8c-4.8,5.3 -7.3,12.3 -7.3,20.8c-0,7.6 2.3,13.8 6.9,18.6c4.6,4.8 10.3,7.2 17,7.2c6.8,0 12.4,-2.4 16.8,-7.2c4.4,-4.8 6.6,-11.4 6.6,-19.8Z"
+        android:fillType="nonZero"/>
+    <path
+        android:pathData="M1774.8,672.1l0,137.4c0,37.9 -30.8,68.7 -68.7,68.7l-180.9,-0c-37.9,-0 -68.7,-30.8 -68.7,-68.7l0,-137.4c0,-37.9 30.8,-68.7 68.7,-68.7l180.9,-0c37.9,-0 68.7,30.8 68.7,68.7Z"
+        android:fillColor="#fcf5bd"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M1572,748.6h93.1v11.9h-93.1z"
+        android:fillType="nonZero"/>
+  </group>
 </vector>
